[package]
name = "sol-escrow"
version = "0.1.0"
edition = "2018"
license = "WTFPL"
publish = false
authors = ["top1st"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.7.11"
thiserror = "1.0.29"

[lib]
crate-type = ["cdylib", "lib"]
